Add RecipeService, rework key, new specific routes