@@ -9,8 +9,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.data.mongo.DataMongoTest;
 import org.springframework.test.context.ContextConfiguration;
 
-import java.time.*;
+import java.time.LocalDate;
+import java.time.LocalTime;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assumptions.assumeThat;
@@ -30,21 +34,21 @@ public class RecipesRepositoryTest {
     @Test
     void writeReadTest(){
         Recipe recipe = Recipe.builder()
-                .author(new User(Key.randomKey().toString(), "Thomas"))
+                .author(new User(Key.randomKey("USR",14).toString(), "Thomas"))
                 .description("A test recipe")
                 .categories(Arrays.asList(new Category("Test", null)))
                 .likes(5)
-                .key(Key.randomKey().toString())
+                .key(Key.randomKey(Key.RECIPE_PREFIX, Key.RECIPE_LENGTH).toString())
                 .difficulty(Difficulty.BEGINNER)
                 .creationTS(ZonedDateTime.of(LocalDate.of(2023, 11, 14),
                         LocalTime.of(9, 26),
                         ZoneId.of("UTC")))
-                .comments(Arrays.asList(
-                        new Comment(new User(Key.randomKey().toString(), "Billy Bob"), "Very Cool Test", null,
+                .comments(List.of(
+                        new Comment(new User(Key.randomKey("USR", 14).toString(), "Billy Bob"), "Very Cool Test", null,
                                 ZonedDateTime.of(LocalDate.of(2023, 11, 15),
                                         LocalTime.of(12, 32),
                                         ZoneId.of("America/Vancouver")))))
-                .ingredients(Arrays.asList(new Ingredient("Pasta", Key.randomKey().toString(), 100, Unit.GRAMS)))
+                .ingredients(List.of(new Ingredient("Pasta", Key.randomKey("ING", 10).toString(), 100, Unit.GRAMS)))
                 .nutrientSummary(new NutrientSummary(10, 5, 5, 5))
                 .titlePictureID("picture123")
                 .build();
